# handson-ml3

./: .gitignore  .pre-commit-config.yaml  01_the_machine_learning_landscape.ipynb  INSTALL.md  environment.yml  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: README.md  ml-engineer.agent.md
.github/instructions/: config.instructions.md  data-processing.instructions.md  model-architecture.instructions.md  python-ml.instructions.md  training.instructions.md
.github/skills/: README.md
.github/skills/data-validation/: SKILL.md
.github/skills/numpy-pro/: SKILL.md
.github/skills/numpy-pro/references/: array-creation-manipulation.md  broadcasting-vectorization.md  indexing-slicing.md  linear-algebra.md  performance-optimization.md
.github/skills/pandas-pro/: SKILL.md
.github/skills/pandas-pro/references/: aggregation-groupby.md  data-cleaning.md  dataframe-operations.md  merging-joining.md  performance-optimization.md
.github/skills/python-pro/: SKILL.md
.github/skills/python-pro/references/: async-patterns.md  packaging.md  standard-library.md  testing.md  type-system.md
.github/skills/pytorch-tensorflow-training/: SKILL.md
