[project]
name = "handson-ml3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "box2d>=2.3.10",
    "google-cloud-aiplatform~=1.36.2",
    "google-cloud-storage~=2.13.0",
    "graphviz~=0.20.1",
    "gymnasium[accept-rom-license,atari]~=0.29.1",
    "ipywidgets~=8.1.1",
    "joblib~=1.3.2",
    "jupyterlab~=4.0.8",
    "keras-tuner~=1.4.6",
    "matplotlib~=3.8.1",
    "nbdime~=3.2.1",
    "nltk~=3.8.1",
    "numexpr~=2.8.7",
    "numpy~=1.26.2",
    "pandas~=2.1.3",
    "pillow~=10.1.0",
    "pydot~=1.4.2",
    "requests~=2.31.0",
    "scikit-learn~=1.3.2",
    "scipy~=1.11.3",
    "statsmodels~=0.14.0",
    "tensorboard~=2.14.1",
    "tensorboard-plugin-profile~=2.14.0",
    "tensorflow~=2.14.0",
    "tensorflow-datasets~=4.9.3",
    "tensorflow-hub~=0.15.0",
    "tensorflow-serving-api~=2.14.0",
    "tqdm~=4.66.1",
    "transformers~=4.35.0",
    "urlextract~=1.8.0",
    "xgboost~=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
